# generative_ai_learning_path_tasks

AgentTask/: .gitignore  README.md  pyproject.toml  requirements.txt
AgentTask/src/: __main__.py  agent_response.py
AgentTask/src/agent/: agent.py  tools.py
AgentTask/src/core/: config.py
AgentTask/src/utils/: rich_cli_helpers.py
OpenAIAssistantsTask/: .env.sample  .gitignore  README.md  requirements.txt
OpenAIAssistantsTask/src/: __main__.py  rag_ingestion.py  setup_assistant.py  streamlit_app.py
OpenAIAssistantsTask/src/core/: config.py  db_config.py  openai_config.py
OpenAIAssistantsTask/src/documents/: index.html  index.md
OpenAIAssistantsTask/src/rag/: chunking.py  embedding.py  llm.py  rag_pipeline.py  semantic_search.py
OpenAIAssistantsTask/src/retrieval_tool/: retrieval_tool_pipeline.py  threads.py  vector_store.py
OpenAIAssistantsTask/src/utils/: data_extraction.py  file_handlers.py
RAGTask/: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  results.txt
RAGTask/apps/: __main__.py  response.txt  results.txt  streamlit_app.py
RAGTask/apps/augmentation/: augmentation_pipeline.py
RAGTask/apps/core/: config.py  db_config.py
RAGTask/apps/generation/: generation_pipeline.py
RAGTask/apps/ingestion/: brochure_extraction.py  chunking.py  ingestion_pipeline.py
RAGTask/apps/retrieval/: retrieval_pipeline.py
RAGTask/apps/utils/: rag_pipeline.py  response_handlers.py
RAGTask/brochures/: brochures.txt
